--- a/paper/mainmatter.tex
+++ b/paper/mainmatter.tex
@@ -58,7 +58,7 @@ Beide Blöcke verwenden ein \emph{sparse Mixture-of-Experts} (MoE) Konzept um ge
 Das vollständige Modell besitzt 17 Milliarden Parameter und ist damit das größte Modell in dieser Auswahl \cite[S.~7-9]{cai2025hidreami1highefficientimagegenerative}.
 
 Das Flux.1 Modell wurde im August 2024 von Black Forest Labs (BFL), eines in Freiburg im Breisgau gegründeten Start-Ups, veröffentlicht. Es ist in den drei Varianten FLUX.1-pro, FLUX.1-dev und FLUX.1-schnell verfügbar, wobei das FLUX.1-pro Modell nicht frei verfügbar ist. 
-Das Modell basiert nach eigenen Angaben von BFL auf ihrer Webseite aus "einer hybriden Architektur aus multimodal und parallel diffusion Transformer Blöcken die auf 12 Milliarden Parameter skaliert wurden. Die Architektur wird durch flow Matching weiter verbessert. Die Performance und Hardwareeffizienz wird durch den Einsatz von rotary positional embeddings und parallel attention layers optimiert" \cite{bfl-flux-announcement}.
+Das Modell basiert nach eigenen Angaben von BFL auf ihrer Webseite aus ``einer hybriden Architektur aus multimodal und parallel diffusion Transformer Blöcken die auf 12 Milliarden Parameter skaliert wurden. Die Architektur wird durch flow Matching weiter verbessert. Die Performance und Hardwareeffizienz wird durch den Einsatz von rotary positional embeddings und parallel attention layers optimiert'' \cite{bfl-flux-announcement}.
 
 Das Stable Diffusion 3.5 stammt von Stability AI und wurde im Oktober 2024 veröffentlicht. Es ist in den Varianten Large, Large Turbo und Medium verfügbar. Diese dürfen für die Forschung, für nicht-kommerzielle und kommerzielle bis zu einem Jahresumsatz von einer Million US Dollar frei verwendet werden.
 Die in diesem Projekt verwendete Large Variante hat 8.1 Milliarden Parameter. Dieses Modell setzt auf eine multimodal Diffusion Transformer Architektur (MMDiT). Dies erlaubt es entgegen anderen Architekturen, wie zum Beispiel der einfachen Diffusion Transformer Architektur, dass eine Zwei-Wege Kommunikation zwischen den Text und Bild Daten stattfindet. Dies erlaubt eine bessere Text-zu-Bild Generierung. Trainiert wurde das Modell auf dem ImageNet und CC12M Datensatz und wurde gegen den COCO-2014 Validierungssatz getestet \cite[S.~4-5]{esser2024scalingrectifiedflowtransformers}.
@@ -359,3 +359,5 @@ Mit dem Erfolg des Tests des Datensatzes wurde das Projekt erfolgreich und inner
 Zusammenfassend wurden im Rahmen dieses Projekts sowohl echte als auch synthetische Bilder gesammelt, sorgfältig annotiert und in einem einheitlichen Format bereitgestellt. Durch die Evaluation verschiedener Bildgenerierungsmodelle konnte ein geeignetes Modell für die Erstellung synthetischer Daten ausgewählt werden. Die Annotation im COCO-Format ermöglicht eine direkte Weiterverwendung mit etablierten Frameworks und Modellen im Bereich der Objekterkennung.
 Die im Projekt gewonnenen Erkenntnisse und der erstellte Datensatz bilden eine solide Grundlage für weiterführende Arbeiten, insbesondere für die geplante Bachelorarbeit, in der die Leistungsfähigkeit von Objekterkennungsmodellen auf Basis dieses Datensatzes untersucht werden soll. Darüber hinaus kann der Workflow zur Datensatzgenerierung und -annotation als Vorlage für ähnliche Projekte dienen.
 Die Ergebnisse des Projektes werden in einer noch folgenden abschließenden Präsentation vorgestellt.
+
+Die vollständigen Dateien des Projekts, einschließlich der generierten Bilder, Annotationen und Jupyter Notebooks, sind im GitHub Repository \url{https://github.com/fhswf-projekte/real-synth-object-detection-dataset-titom001} verfügbar.
